k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-analyzer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: music-analyzer
  template:
    metadata:
      labels:
        app: music-analyzer
    spec:
      containers:
      - name: music-analyzer
        image: davmano/music-analyzer:v1
        ports:
        - containerPort: 80
