k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-analyzer-service
spec:
  type: NodePort
  selector:
    app: music-analyzer # This selector should match the labels in the deployment
  ports:
  - protocol: TCP
    port: 80 # The port that the service will expose
    targetPort: 80 # The port on the container that the service will forward to
    nodePort: 30080 # Optional: specify a node port for external access
