k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-analyzer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: music.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: music-analyzer-service
              port:
                number: 80
